# simple-word-count

./: .gitignore  Cargo.toml  README.md
bin_test/: test.py
editor/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
editor/vscode-extension/: README.md  package-lock.json  package.json
editor/vscode-extension-web/: README.md  package-lock.json  package.json  vite.config.ts
editor/vscode-extension-web/src/: App.svelte
editor/vscode-extension-web/src/lib/: Folder.svelte
editor/vscode-extension-web/src/script/: type.ts
editor/vscode-extension/src/: extension.ts
editor/vscode/src/: extension.ts
src/: lib.rs  main.rs
